mentor ma messages nu icon add kariyu and pages sarkha kariya

--- a/ASCEND 3/ASCEND 3/ascend-ui/contact.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/contact.html
@@ -118,9 +118,9 @@
     <header class="header">
         <a href="index.html" class="nav-logo"
             style="text-decoration: none; display: flex; align-items: center; gap: 10px; position: absolute; left: 32px;">
-            <i data-lucide="zap" style="width: 24px; height: 24px; color: #4DA3FF; fill: #4DA3FF;"></i>
+            <i data-lucide="zap" style="width: 22px; height: 24px; color: #4DA3FF; fill: #4DA3FF;"></i>
             <span
-                style="font-family: 'Orbitron', sans-serif; font-size: 20px; font-weight: 700; color: white;">ASCEND</span>
+                style="font-family: 'Orbitron', sans-serif; font-size: 1.125rem; font-weight: 700; color: white;">ASCEND</span>
         </a>
 
         <div class="dashboard-nav-group">
