--- a/ASCEND 3/ASCEND 3/ascend-ui/My-Mentor.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/My-Mentor.html
@@ -246,6 +246,7 @@
                 const data = await response.json();
                 if (response.ok) {
                     alert('Request sent successfully!');
+                    window.location.reload();
                 } else {
                     alert(data.error || 'Failed to send request');
                 }
