mentor ma messages nu icon add kariyu and pages sarkha kariya

--- a/ASCEND 3/ASCEND 3/ascend-ui/dashboard-navigation.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/dashboard-navigation.html
@@ -35,6 +35,7 @@
     <div class="sidebar-footer">
         <div class="sidebar-nav-item" id="collapseBtn">
             <i data-lucide="chevron-left" style="width: 20px; height: 20px; stroke-width: 1.5;"></i>
+            <span>Collapse</span>
         </div>
 
         <a href="login.html" class="sidebar-nav-item" id="logoutBtn">
